Java 21 refactoring